added support for postgresql hash partitioning